--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,11 +1,18 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="tertiary">
-    <ion-title>
-      Cara ou Coroa
-    </ion-title>
+    <ion-title> Cara ou Coroa </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-<img src="assets/logo.png" alt="">
+  <div class="container-coin ion-justify-content-center ion-align-items-center">
+    <img [src]="moeda" alt="" />
+    <h1>{{info}}</h1>
+  </div>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar color="tertiary" (click)="jogarMoeda()">
+    <ion-title class="ion-text-center"> {{botaoInfo}} </ion-title>
+  </ion-toolbar>
+</ion-footer>
