fazendo tabs2 - truco

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,27 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
+
+  <ion-toolbar color="primary">
+    <ion-title> Truco </ion-title>
   </ion-toolbar>
-</ion-header>
+
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <ion-grid>
+    <ion-row>
+      <ion-button color="danger">1</ion-button>
+      <ion-button color="danger">3</ion-button>
+      <ion-button color="danger">6</ion-button>
+      <ion-button color="danger">9</ion-button>
+      <ion-button color="danger">12</ion-button>
+    </ion-row>
+  </ion-grid>
+
+
+
 </ion-content>
+
+
+  <ion-button color="danger"> Restaurar</ion-button>
+
+
+
