--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,17 @@
 <ion-header [translucent]="true">
-  <ion-toolbar color="primary">
-    <ion-title> Truco </ion-title>
+  <ion-toolbar color="dark">
+    <ion-title class="ion-text-center"> Truco </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <div class="Container ion-justify-content-center ion-aling-items-center">
 
-    <ion-button size="default">1</ion-button>
-    <ion-button size="default">3</ion-button>
-    <ion-button size="default">6</ion-button>
-    <ion-button size="default">9</ion-button>
-    <ion-button size="default">12</ion-button>
+    <ion-button size="default" color="dark">1</ion-button>
+    <ion-button size="default" color="dark">3</ion-button>
+    <ion-button size="default" color="dark">6</ion-button>
+    <ion-button size="default" color="dark">9</ion-button>
+    <ion-button size="default" color="dark">12</ion-button>
   </div>
 
   <ion-grid>
@@ -19,22 +19,22 @@
 
       <ion-col class="ion-justify-content-center ion-align-items-center">
 
-        <ion-button size="large" expand="full">+</ion-button>
+        <ion-button size="large" expand="full" color="dark">+</ion-button>
         <span>valor</span>
-        <ion-button size="large" expand="full">-</ion-button>
+        <ion-button size="large" expand="full" color="dark">-</ion-button>
 
         <div class="times">
-          <span>Time 02</span>
+          <span>Time 01</span>
           <span>Valor</span>
         </div>
       </ion-col>
-      <ion-col></ion-col>
       <ion-col class="ion-justify-content-center ion-align-items-center">
 
-        <ion-button size="large" expand="full">+</ion-button>
+        <ion-button size="large" expand="full" color="dark">+</ion-button>
         <span>Valor</span>
-        <ion-button size="large" expand="full">-</ion-button>
-        <div class="timer">
+        <ion-button size="large" expand="full" color="dark">-</ion-button>
+      
+        <div class="times">
           <span>Time 02</span>
           <span>Valor</span>
         </div>
@@ -44,7 +44,7 @@
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar color="danger">
-    <ion-title class="ion-text-center">Resetar</ion-title>
+  <ion-toolbar color="danger" >
+    <ion-title class="ion-text-center" color="dark">Resetar</ion-title>
   </ion-toolbar>
 </ion-footer>
