--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -15,3 +15,22 @@ ion-col{
     flex-direction: column;
     text-align: center;
 }
+
+.background {
+  height: 100%;
+  width: 100%;
+  background: url("../../assets/truco.jpg");
+  background-size: cover;
+  filter: opacity(20%);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.container {
+  position: relative;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
