--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -16,12 +16,12 @@ ion-col{
     text-align: center;
 }
 
-.background {
+.Background {
   height: 100%;
   width: 100%;
-  background: url("../../assets/truco.jpg");
-  background-size: cover;
-  filter: opacity(20%);
+  Background: url("../../assets/baralho.jpg");
+  Background-size: cover;
+  filter: opacity(150%);
   position: absolute;
   top: 0;
   left: 0;
